# collections_solver

./: .gitignore  README.md  USAGE_GUIDE.md  blog_post.md  gemini.py  main.py  pyproject.toml  results.csv
data/: sft_alpha.jsonl  sft_beta.jsonl  test_final.jsonl
data/cache/: emb_kmeans.jsonl  gpt4o_baseline.jsonl  gpt4o_baseline.raw.jsonl  gpt4o_mini_baseline.jsonl  gpt4o_mini_baseline.raw.jsonl  llama70b_baseline.jsonl  llama70b_baseline.raw.jsonl  llama8b_baseline.jsonl  llama8b_baseline.raw.jsonl  llm_baseline.jsonl  llm_baseline.raw.jsonl  llm_frontier.jsonl  llm_frontier.raw.jsonl  qwen72b_baseline.jsonl  qwen72b_baseline.raw.jsonl  sonnet_baseline.jsonl  sonnet_baseline.raw.jsonl
data/cache/common/: gpt4o_baseline_common.jsonl  gpt4o_mini_baseline_common.jsonl  (+4 more)
data/interim/: dev.jsonl  solver_train.jsonl  solver_val.jsonl  test.jsonl  train.jsonl
data/raw/: connections.csv
data/training/: synthetic_puzzles.jsonl
experiments/: failed_approaches.md
notebooks/: 01_data_preparation.ipynb  02_generate_traces.ipynb  03_training.ipynb  04_evaluation.ipynb
results/: summary.json
src/: __init__.py  evaluation.py  game_loop.py  utils.py
src/cli/: __init__.py  compare_models.py  evaluate.py  explore_data.py  generalte_adversial_examples.py  generate_synthetic_puzzles.py  prepare_data.py  prepare_direct_solver_data.py  run_baseline_embed.py  run_baseline_llm.py
src/core/: env.py
src/models/: __init__.py  anthropic_client.py  base_client.py  client_factory.py  clustering.py  embeddings.py  gemini_client.py  llm_client.py  openai_client.py  oss_client.py
